# gamification-project

./: .env.example  .gitignore  CLAUDE.md  docker-compose.yml  implementation_plan.md  project_summary.md  pyproject.toml
.agents/rules/: python-code-comments.md  python-code-quality.md  python-named-arguments.md  python-none-usage-restriction.md  python-strict-typing.md
.claude/skills/python-clean-code/: SKILL.md
.screenshots/: gamification-backend-architecture.excalidraw
bruno/: bruno.json
bruno/Health/: Health Check.bru
bruno/Missions/: Complete Mission - Duplicate (409).bru  Complete Mission.bru  Create Mission.bru  Get Mission.bru  List Active Missions.bru
bruno/Rewards/: Create Reward.bru  Get Reward.bru  List Rewards.bru  Purchase Reward.bru
bruno/Users/: Create User.bru  Get User.bru  List Users.bru
bruno/environments/: Local.bru
docs/: README.md  advanced_gamification_features.md  architecture.md  controllers-structure.md  deprecated_project_summary.md  implementation_plan.md  phase_1_summary.md  tech-debt.md
docs/architecture/: controllers-structure.md  domain-models-and-dtos.md  hexagonal-architecture.md  logging-format.md
docs/how-tos/: how-to-run-backend.md  how-to-unit-test-backend.md
docs/roadmap/: 01-phase-1-backend-foundation.md  02-phase-1-backend-refactor.md  03-phase-1-backend-unit-tests.md  04-phase-1-backend-postgresql.md
src/backend/: main.py  requirements.txt
src/backend/alembic/: env.py
src/backend/alembic/versions/: 0001_initial_schema.py  0002_add_user_version_id.py
src/backend/core/infrastructure/observability/: logging.py
src/backend/tests/: conftest.py
src/backend/tests/integration/: conftest.py
(+113 files in other folders)
